Thu Feb 28 13:22:40 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* po/{ca, es, fr}.po: unfuzz.

	* doc/C/gnome-mud.sgml: several changes to <articleinfo>.

Thu Feb 28 13:04:48 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* po/{es, de, ca, fr}.po: make update-po
	* po/sv.po: added one missing string.
	
	* src/net.c (connection_send_telnet_control): Compile fix for
	bug #523666.

	* src/profiles.c (profilelist_new_input_cb): Renamed to
	profilelist_new_profile
	(profilelist_new_cb): Changed gnome_request_dialog to
	gnome_dialog.

Wed Feb 27 14:54:35 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* po/sv.po: added two missing strings.

Wed Feb 27 14:01:53 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* po/fr.po: added two missing strings, from Mt.

Wed Feb 27 13:11:48 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* doc/C/gnome-mud.sgml: removed fixed bugs from the "Bugs and
	Limitations" section.

Wed Feb 27 12:38:08 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: minor additions.
	* ROADMAP: MCCP fixed.
	* gnome-mud.desktop: added French translation. Yes, my French sucks.

Tue Feb 26 21:04:16 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: fr updated.
	* po/fr.po: French translation update by Martin Quinson.

Tue Feb 26 08:02:24 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* NEWS: Added sv as language.

	* src/net.c (read_from_connection): Compile fix when not using
	MCCP

	* src/telnet.c (pre_process): Patch from Vashti regarding IAC GA
	and EOR.

Mon Feb 25 12:37:39 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/net.c: patch by Vashti & Robin: fixes MCCP crash (really).
	As a bonus effect, it causes some text corruption every now and
	then.

Sun Feb 24 02:40:42 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: changed python detection script so you can
	specify a diferent python binary. Patch from Gergely Nagy.

Sat Feb 23 22:32:59 CET 2002  Jordi Mallach  <jordi@sindominio.net>
