@@ -1,3 +1,8 @@
+Thu Feb 28 14:37:11 CET 2002  Robin Ericsson  <lobbin@localhost.nu>
+
+	* src/profiles.c: A small comment snuck into the rewrite earlier
+	today.
+
 Thu Feb 28 13:22:40 CET 2002  Jordi Mallach  <jordi@sindominio.net>
 
 	* po/{ca, es, fr}.po: unfuzz.
